2001-03-09  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS (Write After Approval): Update Philip Blundell.

2001-03-09  Keith Seitz  <keiths@cygnus.com>

	* MAINTAINERS: Add myself to write after approval list.

2001-03-09  Mark Kettenis  <kettenis@gnu.org>

	* i387-tdep.c (print_i387_status_word): Fix printing of Stack
	fault flag.  It is bit 6 of the x87 FPU status word, not bit 7.

2001-03-08  Andrew Cagney  <ac131313@redhat.com>

	* configure.host (m88*-harris-cxux*): Mark as obsolete.
	* configure.tgt: Ditto.
	* config/m88k/xm-cxux.h: Ditto.
	* config/m88k/tm-cxux.h: Ditto.
	* config/m88k/nm-cxux.h: Ditto.
	* config/m88k/cxux.mt: Ditto.
	* config/m88k/cxux.mh: Ditto.

2001-03-08  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in: Delete rules for obsolete files.

Thu Mar  8 15:43:40 2001  David Taylor  <taylor@redhat.com>

	* stack.c (parse_frame_specification): For one argument case,
 	handle the situation where the argument is an integer, not an
 	address -- arguably the most common case.  This matters on
	targets where pointers and addresses are different.

2001-03-08  Andrew Cagney  <ac131313@redhat.com>

	* TODO: Revise 5.1 list.  Delete PARAMS task.  Add coding standard
	review.  Clarify GNU/LINUX/sparc.  Move other tasks to 5.2 or
	general.

2001-03-07  Andrew Cagney  <ac131313@redhat.com>

	* TODO (GDB 5.1 Known Problems): Document problem of building GDB
	with SID on Solaris 8.

2001-03-07  Mark Kettenis  <kettenis@gnu.org>

	* defs.h: Provide prototypes for floatformat_is_negative,
	floatformat_is_nan and floatformat_mantissa.
	* utils.c: Include "gdb_assert.h".
	(floatformat_is_negative): New function.
	(floatformat_is_nan): New function.
	(floatformat_mantissa): New function.
	* valprint.c: Include "floatformat.h".
	(print_floating): Get rid of the Linux-specific
	TARGET_ANALYZE_FLOATING macro and rewrite NaN detection with the
	help these new functions.  Print NaN's in a format conforming to
	ISO C99.
